--- a/notfound.html
+++ b/notfound.html
@@ -32,9 +32,9 @@
 				<div class="header__right__sroll">
 					<div class="header__right">
 						<div class="header__top">
-							<a href="tel:+78123726615"><i class="fas fa-phone-alt"></i>+7 (812) 372-66-15</a>
-							<a href="tel:+78123726615">+7 (495) 105-97-15</a>
-							<a href=""><i class="fas fa-envelope"></i>contact@distate.ru</a>
+							<a href="tel:+78123726615"><i class="fas fa-phone-alt"></i>+380 97 77 77 777</a>
+							<a href="tel:+78123726615">+380 97 77 77 777</a>
+							<a href=""><i class="fas fa-envelope"></i>contact@distate.com</a>
 						</div>
 
 						<nav class="header__nav">
