feat: all translate

--- a/car-d.html
+++ b/car-d.html
@@ -22,7 +22,7 @@
 					<a href="" class="logo">
 						<img src="./img/logo.svg">
 					</a>
-					<span>Карьера</span>
+					<span>Career</span>
 				</div>
 				<div class="burger">
 					<span></span>
@@ -40,67 +40,67 @@
 						<nav class="header__nav">
 							<ul>
 								<li>
-									<span>Продукты</span>
+									<span>Products</span>
 									<div class="header__level2">
 										<div class="wrap">
-											<div class="level2__title">Продукты</div>
+											<div class="level2__title">Products</div>
 											<div class="level2__links">
-												<a href="">DiState: Мультипровайдер</a>
-												<a href="">DiState: Организатор ЭДО</a>
-												<a href="">DiState: Документооборот</a>
-												<a href="">DiState: Оператор ЭДО</a>
-												<a href="">DiState: Кадры</a>
+												<a href="p-multi.html">DiState: multiprovider</a>
+												<a href="p-cadr.html">DiState: EDI Organizer</a>
+												<a href="p-document.html">DiState: Document flow</a>
+												<a href="p-operator.html">DiState: EDF operator</a>
+												<a href="p-cadr.html">DiState: Personnel</a>
 											</div>
 										</div>
 									</div>
 								</li>
 								<li>
-									<span>Решения</span>
+									<span>Solutions</span>
 									<div class="header__level2">
 										<div class="wrap">
-											<div class="level2__title">Решения</div>
+											<div class="level2__title">Solutions</div>
 											<div class="level2__links">
-												<a href="">Малый бизнес</a>
-												<a href="">Автопром</a>
-												<a href="">Арендный бизнес</a>
-												<a href="">Телеком</a>
-												<a href="">Банковский сектор</a>
-												<a href="">Логистика</a>
-												<a href="">Ритейл</a>
-												<a href="">Производство</a>
-												<a href="">Маркетплейсы</a>
-												<a href="">ЭТП, УЦ</a>
+												<a>Small business</a>
+												<a>Auto industry</a>
+												<a>Rental business</a>
+												<a>Telecom</a>
+												<a>Banking sector</a>
+												<a>Logistics</a>
+												<a>Retail</a>
+												<a>Production</a>
+												<a>Marketplaces</a>
+												<a>ETP, UC</a>
 											</div>
 										</div>
 									</div>
 								</li>
 								<li>
-									<span>Партнерство </span>
+									<span>Partnership </span>
 									<div class="header__level2">
 										<div class="wrap">
-											<div class="level2__title">Партнерство </div>
+											<div class="level2__title">Partnership </div>
 											<div class="level2__links">
-												<a href="">Для дилеров</a>
-												<a href="">Для партнеров</a>
-												<a href="">КриптоПро </a>
+												<a href="">For dealers</a>
+												<a href="">For partners</a>
+												<a href="">CryptoPro </a>
 											</div>
 										</div>
 									</div>
 								</li>
 								<li>
-									<span>Поддержка</span>
+									<span>Support</span>
 									<div class="header__level2">
 										<div class="wrap">
-											<div class="level2__title">Поддержка</div>
+											<div class="level2__title">Support</div>
 											<div class="level2__links">
-												<a href="">Премиум-поддержка</a>
-												<a href="">Техподдержка </a>
-												<a href="">База знаний</a>
+												<a href="">Premium support</a>
+												<a href="">Support </a>
+												<a href="">Knowledge base</a>
 											</div>
 										</div>
 								</li>
 								<li>
-									<a href="">Вход в ЭДО</a>
+									<a href="">Login to EDO</a>
 
 								</li>
 							</ul>
@@ -118,13 +118,13 @@
 					<div class="car-d">
 						<img src="./img/sfon/card/1.png" class="cardfon">
 						<div class="car-d__top">
-							<a href="">Назад к вакансиям </a>
+							<a href="">Back to vacancies </a>
 							<div class="car-d__h">
 								<div class="title">Frontend Developer</div>
 								<div class="car-d__h__bot">
-									<span><i class="fas fa-map-marker-alt"></i>Санкт-Петербург</span>
-									<span><i class="cari"></i>Фрунзенская</span>
-									<span><i class="fas fa-user"></i>Полный день</span>
+									<span><i class="fas fa-map-marker-alt"></i>Los Angeles</span>
+									<span><i class="cari"></i>Frunzenskaya</span>
+									<span><i class="fas fa-user"></i>full day</span>
 								</div>
 							</div>
 						</div>
@@ -132,45 +132,60 @@
 
 						<div class="car-d__wraper">
 							<p>
-								Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает
-								сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее
-								стандартное заполнение шаблона, а также реальное распределение букв и пробелов в
-								абзацах, которое не получается при простой дубликации при простой дубликациипри простой
-								дубликациипри простой дубликации
+								It has long been found that when evaluating design and composition, readable text
+								interferes with
+								focus. Lorem Ipsum is used because it provides more or less
+								standard template filling, as well as the actual distribution of letters and spaces in
+								paragraphs, which is not obtained with simple duplication with simple duplication with
+								simple
+								duplication with simple duplication
 							</p>
 							<p>
-								Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в качестве
-								текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает,
-								как много веб-страниц всё ещё дожидаются своего настоящего рождения. За прошедшие годы
-								текст Lorem Ipsum получил много версий. Некоторые версии появились по ошибке, некоторые
-								- намеренно (например, юмористические варианты).
+								Many layout programs and HTML editors use Lorem Ipsum as their
+								text by default, so a search for the keywords "lorem ipsum" immediately shows
+								how many web pages are still waiting for their real birth. Over the years
+								the text of Lorem Ipsum has received many versions. Some versions appeared by mistake,
+								some
+								- intentionally (for example, humorous options).
 							</p>
 
-							<h2>Обязанности:</h2>
+							<h2>Responsibilities:</h2>
 							<ul>
-								<li>Работа в крупной и перспективной it-компании, но абсолютно без бюрократии. По своему
-									типу мы очень близки к бирюзовой организации.</li>
-								<li>Работа в крупной и перспективной it-компании, но абсолютно без бюрократии. По своему
-									типу мы очень близки к бирюзовой организации.</li>
-								<li>Работа в крупной и перспективной it-компании, но абсолютно без бюрократии. </li>
+								<li>Work in a large and promising IT company, but absolutely without bureaucracy. In my
+									own way
+									type we are very close to the turquoise organization.</li>
+								<li>Work in a large and promising IT company, but absolutely without bureaucracy. In my
+									own way
+									type we are very close to the turquoise organization.</li>
+								<li>Work in a large and promising IT company, but absolutely without bureaucracy. In my
+									own way
+									type we are very close to the turquoise organization.</li>
 							</ul>
 
-							<h2>Требования:</h2>
+							<h2>Requirements:</h2>
 							<ul>
-								<li>Работа в крупной и перспективной it-компании, но абсолютно без бюрократии. По своему
-									типу мы очень близки к бирюзовой организации.</li>
-								<li>Работа в крупной и перспективной it-компании, но абсолютно без бюрократии. По своему
-									типу мы очень близки к бирюзовой организации.</li>
-								<li>Работа в крупной и перспективной it-компании, но абсолютно без бюрократии. </li>
+								<li>Work in a large and promising IT company, but absolutely without bureaucracy. In my
+									own way
+									type we are very close to the turquoise organization.</li>
+								<li>Work in a large and promising IT company, but absolutely without bureaucracy. In my
+									own way
+									type we are very close to the turquoise organization.</li>
+								<li>Work in a large and promising IT company, but absolutely without bureaucracy. In my
+									own way
+									type we are very close to the turquoise organization.</li>
 							</ul>
 
-							<h2>Что мы предлагаем:</h2>
+							<h2>What do we offer:</h2>
 							<ul>
-								<li>Работа в крупной и перспективной it-компании, но абсолютно без бюрократии. По своему
-									типу мы очень близки к бирюзовой организации.</li>
-								<li>Работа в крупной и перспективной it-компании, но абсолютно без бюрократии. По своему
-									типу мы очень близки к бирюзовой организации.</li>
-								<li>Работа в крупной и перспективной it-компании, но абсолютно без бюрократии. </li>
+								<li>Work in a large and promising IT company, but absolutely without bureaucracy. In my
+									own way
+									type we are very close to the turquoise organization.</li>
+								<li>Work in a large and promising IT company, but absolutely without bureaucracy. In my
+									own way
+									type we are very close to the turquoise organization.</li>
+								<li>Work in a large and promising IT company, but absolutely without bureaucracy. In my
+									own way
+									type we are very close to the turquoise organization.</li>
 							</ul>
 
 							<div class="carform">
@@ -179,39 +194,39 @@
 
 
 									<div class="carform__item">
-										<input type="" name="name" placeholder="Контактное лицо (ФИО) *" required>
-										<input type="email" name="mail" placeholder="Электронная почта *" required>
+										<input type="" name="name" placeholder="Contact person (full name) *" required>
+										<input type="email" name="mail" placeholder="Email *" required>
 									</div>
 
 									<div class="carform__item">
-										<input class="phone" type="" name="tel" placeholder="Номер телефона *" required>
+										<input class="phone" type="" name="tel" placeholder="Phone number *" required>
 										<div class="carform__link">
 											<input class="carform__link__first" type="" name="link"
-												placeholder="Ссылка на резюме *" required>
+												placeholder="Link to resume *" required>
 											<div class="file">
 												<input type="file" name="file" id="file">
-												<span>или</span>
-												<label for="file">Прикрепить</label>
+												<span>or</span>
+												<label for="file">Attach</label>
 											</div>
 										</div>
 									</div>
 
 									<div class="carform__item">
-										<input type="" name="job" placeholder="Желаемая должность">
-										<input type="" name="linkr" placeholder="Ссылка на портфолио ">
+										<input type="" name="job" placeholder="Career objective">
+										<input type="" name="linkr" placeholder="Link to portfolio">
 									</div>
 
 									<div class="carform__item">
-										<textarea placeholder="Сообщение *" name="text" required></textarea>
+										<textarea placeholder="Message *" name="text" required></textarea>
 									</div>
 									<div class="chekbox">
 										<input type="checkbox" name="check1" id="check1" required=""
 											aria-required="true">
 										<label for="check1"><i class="fas fa-check"></i></label>
-										<span>Я согласен(а) с <a href="">Политикой конфиденциальности</a></span>
+										<span>I agree with <a href="">Privacy Policy</a></span>
 									</div>
 									<div class="carformbtn">
-										<button id="btn" class="btn-o-mini">Отправить</button>
+										<button id="btn" class="btn-o-mini">Send</button>
 									</div>
 								</form>
 							</div>
@@ -233,7 +248,7 @@
 							<img src="./img/logof.svg">
 						</a>
 						<div class="footer__conf">
-							<a href="" class="politica">Политика конфиденциальности</a>
+							<a href="" class="politica">Privacy Policy</a>
 							<div class="footer__soc">
 								<a href=""><i class="fab fa-facebook-f"></i></a>
 								<a href=""><i class="fab fa-instagram"></i></a>
@@ -247,66 +262,65 @@
 					</div>
 					<div class="footer__right">
 						<div class="footer__menu">
-							<div class="footer__menu__t">Продукты</div>
+							<div class="footer__menu__t">Products</div>
 							<div class="footer__menu__c">
-								<a href="">DiState: Мультипровайдер</a>
-								<a href="">DiState: Мультипровайдер</a>
-								<a href="">DiState: Кадры</a>
-								<a href="">DiState: Организатор ЭДО</a>
-								<a href="">DiState: Оператор ЭДО</a>
+								<a href="">DiState: Multiprovider</a>
+								<a href="">DiState: Personnel</a>
+								<a href="">DiState: EDI Organizer</a>
+								<a href="">DiState: EDF operator</a>
 							</div>
 						</div>
 
 						<div class="footer__menu">
-							<div class="footer__menu__t">Поддержка</div>
+							<div class="footer__menu__t">Support</div>
 							<div class="footer__menu__c">
-								<a href="">Техподдержка</a>
-								<a href="">Премиум-поддержка</a>
-								<a href="">База знаний</a>
+								<a href="">Support</a>
+								<a href="">Premium support</a>
+								<a href="">Knowledge base</a>
 							</div>
 						</div>
 
 						<div class="footer__menu">
-							<div class="footer__menu__t">Отрасли</div>
+							<div class="footer__menu__t">Industries</div>
 							<div class="footer__menu__c">
-								<a href="">Малый бизнес</a>
-								<a href="">Телеком</a>
-								<a href="">Ритейл</a>
-								<a href="">Автопром</a>
-								<a href="">Банковский сектор</a>
+								<a href="">Small business</a>
+								<a href="">Telecom</a>
+								<a href="">Retail</a>
+								<a href="">Auto industry</a>
+								<a href="">Banking sector</a>
 
-								<a href="">Производство</a>
-								<a href="">Арендный бизнес</a>
-								<a href="">Логистика</a>
-								<a href="">Маркетплейсы</a>
-								<a href="">ЭТП, УЦ</a>
+								<a href="">Production</a>
+								<a href="">Rental business</a>
+								<a href="">Logistics</a>
+								<a href="">Marketplaces</a>
+								<a href="">ETP, UC</a>
 							</div>
 						</div>
 
 						<div class="footer__menu">
-							<div class="footer__menu__t">Партнерство</div>
+							<div class="footer__menu__t">Partnership</div>
 							<div class="footer__menu__c">
-								<a href="">Для дилеров</a>
-								<a href="">Для партнеров </a>
-								<a href="">Крипто про </a>
+								<a href="">For dealers</a>
+								<a href="">For partners </a>
+								<a href="">Crypto pro </a>
 							</div>
 						</div>
 						<div class="footer__menu">
-							<div class="footer__menu__t">Компания</div>
+							<div class="footer__menu__t">Company</div>
 							<div class="footer__menu__c">
-								<a href="">О компании</a>
-								<a href="">Документы</a>
-								<a href="">Карьера </a>
-								<a href="">Реквизиты</a>
-								<a href="">Контакты</a>
+								<a href="">About company</a>
+								<a href="">Documentation</a>
+								<a href="">Career </a>
+								<a href="">Requisites</a>
+								<a href="">Contacts</a>
 							</div>
 						</div>
 						<div class="footer__menu">
-							<div class="footer__menu__t">Медиа</div>
+							<div class="footer__menu__t">Media</div>
 							<div class="footer__menu__c">
-								<a href="">Новости </a>
-								<a href="">СМИ о нас</a>
-								<a href="">Истории успеха</a>
+								<a href="">News </a>
+								<a href="">Mass Media about us</a>
+								<a href="">Success stories</a>
 
 							</div>
 						</div>
@@ -314,17 +328,17 @@
 					</div>
 				</div>
 				<div class="footer__bot">
-					© DiState, 2009-2020 г. Все права защищены.
+					© DiState, 2009-2020. All rights reserved.
 				</div>
 			</div>
 		</footer>
 		<div class="carform__submite">
 			<div class="carform__sub">
-				<div class="carform__sub__t">Отлично! </div>
-				<p>Мы получили твоё резюме. Оно будет рассмотрено одним из первых, когда у нас откроется новая вакансия.
-				</p>
-				<a href="" class="btn-o-mini">На главную</a>
-				<span>Остаться на текущей странице</span>
+				<div class="carform__sub__t">Thanks for the application! </div>
+				<p>Our experts will contact you
+					in the near future.</p>
+				<a href="" class="btn-o-mini">To main</a>
+				<span>Stay on current page</span>
 			</div>
 		</div>
 
