--- a/notfound.html
+++ b/notfound.html
@@ -40,67 +40,67 @@
 						<nav class="header__nav">
 							<ul>
 								<li>
-									<span>Продукты</span>
+									<span>Products</span>
 									<div class="header__level2">
 										<div class="wrap">
-											<div class="level2__title">Продукты</div>
+											<div class="level2__title">Products</div>
 											<div class="level2__links">
-												<a href="">DiState: Мультипровайдер</a>
-												<a href="">DiState: Организатор ЭДО</a>
-												<a href="">DiState: Документооборот</a>
-												<a href="">DiState: Оператор ЭДО</a>
-												<a href="">DiState: Кадры</a>
+												<a href="p-multi.html">DiState: multiprovider</a>
+												<a href="p-cadr.html">DiState: EDI Organizer</a>
+												<a href="p-document.html">DiState: Document flow</a>
+												<a href="p-operator.html">DiState: EDF operator</a>
+												<a href="p-cadr.html">DiState: Personnel</a>
 											</div>
 										</div>
 									</div>
 								</li>
 								<li>
-									<span>Решения</span>
+									<span>Solutions</span>
 									<div class="header__level2">
 										<div class="wrap">
-											<div class="level2__title">Решения</div>
+											<div class="level2__title">Solutions</div>
 											<div class="level2__links">
-												<a href="">Малый бизнес</a>
-												<a href="">Автопром</a>
-												<a href="">Арендный бизнес</a>
-												<a href="">Телеком</a>
-												<a href="">Банковский сектор</a>
-												<a href="">Логистика</a>
-												<a href="">Ритейл</a>
-												<a href="">Производство</a>
-												<a href="">Маркетплейсы</a>
-												<a href="">ЭТП, УЦ</a>
+												<a>Small business</a>
+												<a>Auto industry</a>
+												<a>Rental business</a>
+												<a>Telecom</a>
+												<a>Banking sector</a>
+												<a>Logistics</a>
+												<a>Retail</a>
+												<a>Production</a>
+												<a>Marketplaces</a>
+												<a>ETP, UC</a>
 											</div>
 										</div>
 									</div>
 								</li>
 								<li>
-									<span>Партнерство </span>
+									<span>Partnership </span>
 									<div class="header__level2">
 										<div class="wrap">
-											<div class="level2__title">Партнерство </div>
+											<div class="level2__title">Partnership </div>
 											<div class="level2__links">
-												<a href="">Для дилеров</a>
-												<a href="">Для партнеров</a>
-												<a href="">КриптоПро </a>
+												<a href="">For dealers</a>
+												<a href="">For partners</a>
+												<a href="">CryptoPro </a>
 											</div>
 										</div>
 									</div>
 								</li>
 								<li>
-									<span>Поддержка</span>
+									<span>Support</span>
 									<div class="header__level2">
 										<div class="wrap">
-											<div class="level2__title">Поддержка</div>
+											<div class="level2__title">Support</div>
 											<div class="level2__links">
-												<a href="">Премиум-поддержка</a>
-												<a href="">Техподдержка </a>
-												<a href="">База знаний</a>
+												<a href="">Premium support</a>
+												<a href="">Support </a>
+												<a href="">Knowledge base</a>
 											</div>
 										</div>
 								</li>
 								<li>
-									<a href="">Вход в ЭДО</a>
+									<a href="">Login to EDO</a>
 
 								</li>
 							</ul>
@@ -111,9 +111,9 @@
 		</header>
 		<div class="notfound">
 			<div class="notfound__wrap">
-				<span>К сожалению,</span>
-				<div>страница не найдена</div>
-				<a href="">На главную</a>
+				<span>Unfortunately</span>
+				<div>Page not found</div>
+				<a href="main.html">To main</a>
 			</div>
 
 			<img src="./img/404.png">
