--- a/o-company.html
+++ b/o-company.html
@@ -40,67 +40,67 @@
 						<nav class="header__nav">
 							<ul>
 								<li>
-									<span>Продукты</span>
+									<span>Products</span>
 									<div class="header__level2">
 										<div class="wrap">
-											<div class="level2__title">Продукты</div>
+											<div class="level2__title">Products</div>
 											<div class="level2__links">
-												<a href="">DiState: Мультипровайдер</a>
-												<a href="">DiState: Организатор ЭДО</a>
-												<a href="">DiState: Документооборот</a>
-												<a href="">DiState: Оператор ЭДО</a>
-												<a href="">DiState: Кадры</a>
+												<a href="p-multi.html">DiState: multiprovider</a>
+												<a href="p-cadr.html">DiState: EDI Organizer</a>
+												<a href="p-document.html">DiState: Document flow</a>
+												<a href="p-operator.html">DiState: EDF operator</a>
+												<a href="p-cadr.html">DiState: Personnel</a>
 											</div>
 										</div>
 									</div>
 								</li>
 								<li>
-									<span>Решения</span>
+									<span>Solutions</span>
 									<div class="header__level2">
 										<div class="wrap">
-											<div class="level2__title">Решения</div>
+											<div class="level2__title">Solutions</div>
 											<div class="level2__links">
-												<a href="">Малый бизнес</a>
-												<a href="">Автопром</a>
-												<a href="">Арендный бизнес</a>
-												<a href="">Телеком</a>
-												<a href="">Банковский сектор</a>
-												<a href="">Логистика</a>
-												<a href="">Ритейл</a>
-												<a href="">Производство</a>
-												<a href="">Маркетплейсы</a>
-												<a href="">ЭТП, УЦ</a>
+												<a>Small business</a>
+												<a>Auto industry</a>
+												<a>Rental business</a>
+												<a>Telecom</a>
+												<a>Banking sector</a>
+												<a>Logistics</a>
+												<a>Retail</a>
+												<a>Production</a>
+												<a>Marketplaces</a>
+												<a>ETP, UC</a>
 											</div>
 										</div>
 									</div>
 								</li>
 								<li>
-									<span>Партнерство </span>
+									<span>Partnership </span>
 									<div class="header__level2">
 										<div class="wrap">
-											<div class="level2__title">Партнерство </div>
+											<div class="level2__title">Partnership </div>
 											<div class="level2__links">
-												<a href="">Для дилеров</a>
-												<a href="">Для партнеров</a>
-												<a href="">КриптоПро </a>
+												<a href="">For dealers</a>
+												<a href="">For partners</a>
+												<a href="">CryptoPro </a>
 											</div>
 										</div>
 									</div>
 								</li>
 								<li>
-									<span>Поддержка</span>
+									<span>Support</span>
 									<div class="header__level2">
 										<div class="wrap">
-											<div class="level2__title">Поддержка</div>
+											<div class="level2__title">Support</div>
 											<div class="level2__links">
-												<a href="">Премиум-поддержка</a>
-												<a href="">Техподдержка </a>
-												<a href="">База знаний</a>
+												<a href="">Premium support</a>
+												<a href="">Support </a>
+												<a href="">Knowledge base</a>
 											</div>
 										</div>
 								</li>
 								<li>
-									<a href="">Вход в ЭДО</a>
+									<a href="">Login to EDO</a>
 
 								</li>
 							</ul>
@@ -113,43 +113,44 @@
 			<img src="./img/sfon/ocom/1.png" class="o-company__img">
 			<div class="wrap">
 				<div class="o-company wow fadeInUp">
-					<div class="title">Компания «ДиСтэйт» </div>
-					<p>Компания «ДиСтэйт» была создана в 2008 году и является одним из первых разработчиков программного
-						обеспечения в
-						области электронного юридически значимого документооборота в России. </p>
-					<p>Мы создаем программные решения, которые одинаково эффективно автоматизируют бизнес-процессы как в
-						крупных
-						компаниях, так и в организациях малого и среднего бизнеса. Наши продукты помогают компаниям
-						создавать их
-						собственные сервисы юридически значимого документооборота, интегрировать ЭДО с учетными
-						системами, обмениваться
-						документами с любыми системами ЭДО без роуминга и решать другие задачи без затрат на разработку
-						новых решений.
+					<div class="title">DiState Co.</div>
+					<p>The company "DiState" was founded in 2008 and is one of the first developers of software
+						provision in
+						areas of electronic legally significant document management </p>
+					<p>We create software solutions that automate business processes equally effectively as in
+						major
+						companies, as well as small and medium-sized businesses. Our products help companies
+						create them
+						own services of legally significant document flow, integrate EDI with accounting
+						systems, exchange
+						documents with any EDI systems without roaming and solve other tasks without development costs
+						new solutions.
 					</p>
-					<p>За время своего существования мы накопили значительный опыт в области разработки и внедрения
-						систем
-						электронного документооборота в разные отрасли. Этот опыт позволяет нам совершенствовать
-						существующие программные
-						продукты и создавать новые актуальные решения для оптимизации деятельности предприятий
-						различного масштаба и рода
-						деятельности.</p>
+					<p>During our existence, we have accumulated significant experience in the development and
+						implementation of
+						systems
+						electronic document management in various industries. This experience allows us to improve
+						existing program
+						products and create new relevant solutions to optimize the activities of enterprises
+						various sizes and types
+						activities.</p>
 				</div>
 			</div>
 
 			<div class="o-slider wow fadeInUp">
 				<div class="wrap">
-					<div class="title">История</div>
+					<div class="title">Story</div>
 					<div class="o-slider__wrap">
 						<div class="o-slider__item__div">
 							<a href="" class="o-slider__item">
 								<div class="o-slider__title">2020</div>
 								<div class="o-slider__text">
-									<span>DiState: Кадры</span>
-									<p>Решение для автоматизации кадрового документооборота, командировок, приказов о
-										приеме и об увольнении,
-										отправка отчетности о страховом стаже в ПФР </p>
+									<span>DiState: Personnel</span>
+									<p>Solution for automation of personnel workflow, business trips, orders for
+										admission and dismissal
+										sending reports on insurance experience to the FIU </p>
 								</div>
-								<div class="o-slider__link more-link"><span>О решении </span> <i
+								<div class="o-slider__link more-link"><span>About the solution </span> <i
 										class="fas fa-chevron-right"></i></div>
 							</a>
 						</div>
@@ -158,12 +159,13 @@
 							<a href="" class="o-slider__item">
 								<div class="o-slider__title">2017</div>
 								<div class="o-slider__text">
-									<span>DiState: Мультипровайдер</span>
-									<p>ПО для работы в «одном окне» с разными операторами ЭДО/EDI с формированием
-										единого архива документов
+									<span>DiState: multiprovider</span>
+									<p>Software for working in a "single window" with different EDI / EDI operators with
+										the formation
+										single archive of documents
 									</p>
 								</div>
-								<div class="o-slider__link more-link"><span>О решении </span> <i
+								<div class="o-slider__link more-link"><span>About the solution </span> <i
 										class="fas fa-chevron-right"></i></div>
 							</a>
 						</div>
@@ -172,11 +174,12 @@
 							<a href="" class="o-slider__item">
 								<div class="o-slider__title">2016</div>
 								<div class="o-slider__text">
-									<span>DiState: Физическое лицо</span>
-									<p>функционал для работы физического лица в системе ЮЗЭДО, как полноценного
-										участника документооборота </p>
+									<span>DiState: Individual</span>
+									<p>functionality for the work of an individual in the SWEDO system, as a
+										full-fledged
+										document flow participant </p>
 								</div>
-								<div class="o-slider__link more-link"><span>О решении </span> <i
+								<div class="o-slider__link more-link"><span>About the solution </span> <i
 										class="fas fa-chevron-right"></i></div>
 							</a>
 						</div>
@@ -185,11 +188,11 @@
 							<a href="" class="o-slider__item">
 								<div class="o-slider__title">2015</div>
 								<div class="o-slider__text">
-									<span>DiState: Документооборот</span>
-									<p>Решение для автоматизации бесплатного документооборота предприятия с
-										контрагентами</p>
+									<span>DiState: Document flow</span>
+									<p>A solution for automating the free workflow of an enterprise with
+										contractors</p>
 								</div>
-								<div class="o-slider__link more-link"><span>О решении </span> <i
+								<div class="o-slider__link more-link"><span>About the solution </span> <i
 										class="fas fa-chevron-right"></i></div>
 							</a>
 						</div>
@@ -198,12 +201,12 @@
 							<a href="" class="o-slider__item">
 								<div class="o-slider__title">2014</div>
 								<div class="o-slider__text">
-									<span>DiState: Оператор ЭДО</span>
-									<p>Возможность создания B2B-сервиса ЮЗЭДО с настройкой тарифов и локальным архивом
-										документов
+									<span>DiState: EDF operator</span>
+									<p>Ability to create a B2B-service YUZEDO with tariff settings and a local archive
+										documents
 									</p>
 								</div>
-								<div class="o-slider__link more-link"><span>О решении </span> <i
+								<div class="o-slider__link more-link"><span>About the solution </span> <i
 										class="fas fa-chevron-right"></i></div>
 							</a>
 						</div>
@@ -212,12 +215,13 @@
 							<a href="" class="o-slider__item">
 								<div class="o-slider__title">2012</div>
 								<div class="o-slider__text">
-									<span>DiState: ЭДО для УЦ</span>
-									<p>Автоматизация работы удостоверяющего центра с филиалами, формирование отчетов по
-										различным параметрам
+									<span>DiState: EDF for CA</span>
+									<p>Automation of work of the certification center with branches, generation of
+										reports on
+										various parameters
 									</p>
 								</div>
-								<div class="o-slider__link more-link"><span>О решении </span> <i
+								<div class="o-slider__link more-link"><span>About the solution </span> <i
 										class="fas fa-chevron-right"></i></div>
 							</a>
 						</div>
@@ -226,13 +230,14 @@
 							<a href="" class="o-slider__item">
 								<div class="o-slider__title">2009</div>
 								<div class="o-slider__text">
-									<span>Национальный деловой портал DiState</span>
-									<p>web-площадка ЮЗЭДО с сервисами «Страхование», «Логистика», «Третейский суд» и
-										т.д.
+									<span>National business portal DiState</span>
+									<p>web-site of SWEDO with the services "Insurance", "Logistics", "Arbitration Court"
+										and
+										etc.
 
 									</p>
 								</div>
-								<div class="o-slider__link more-link"><span>О решении </span> <i
+								<div class="o-slider__link more-link"><span>About the solution </span> <i
 										class="fas fa-chevron-right"></i></div>
 							</a>
 						</div>
@@ -252,72 +257,80 @@
 			<div class="wrap">
 				<div class="uznay wow fadeInUp">
 					<div class="title">
-						Узнайте подробнее
+						Find out more
 					</div>
 					<div class="uznay__wrap">
 						<a href="" class="uznay__item">
 							<img src="./img/ocp/1.png">
-							<span>Новости</span>
+							<span>News</span>
 						</a>
 
 						<a href="" class="uznay__item">
 							<img src="./img/ocp/2.png">
-							<span>Контакты </span>
+							<span>Contacts </span>
 						</a>
 
 						<a href="" class="uznay__item">
 							<img src="./img/ocp/3.png">
-							<span>Карьера</span>
+							<span>Career</span>
 						</a>
 					</div>
 				</div>
 			</div>
 
 
-			<section class="section5">
+			<section class="p-document section5">
 				<div class="wrap">
 
 					<form class="s5__form wow fadeInUp">
 						<div class="s5__left">
-							<div class="s5__input"><input type="" name="name5" placeholder="Контактное лицо (ФИО) *"
+							<div class="s5__input"><input type="" name="4" placeholder="Contact person (full name) *"
 									required=""></div>
 							<div class="s5__to__input">
-								<input class="phone" type="" name="name" placeholder="Номер телефона * " required="">
-								<input type="email" name="name2" placeholder="Электронная почта *" required="">
+								<input class="phone" type="" name="1" placeholder="Phone number * " required="">
+								<input type="email" name="2" placeholder="Email *" required="">
 							</div>
-							<div class="s5__input"><input type="" name="name3" placeholder="Компания *" required="">
+							<div class="s5__input"><input type="" name="3" placeholder="Company *" required=""></div>
+							<div class="s5__input auto-text"><textarea placeholder="A comment"></textarea>
+								<div class="auto__wrap">
+									<div data-text="Call me please ">Request a call </div>
+									<div data-text="Please send product details">More about the product
+									</div>
+									<div data-text="Please send a product presentation">Request a presentation
+									</div>
+								</div>
 							</div>
-							<div class="s5__input"><textarea placeholder="Комментарий"></textarea></div>
 							<div class="chekbox">
 								<input type="checkbox" name="" id="check1">
 								<label for="check1"><i class="fas fa-check"></i></label>
-								<span>Я согласен(а) с <a href="">Политикой конфиденциальности</a></span>
+								<span>I agree with <a href="">Privacy Policy</a></span>
 							</div>
 						</div>
 						<div class="s5__right">
 							<div>
-								<div class="s5__title">Обратная связь </div>
-								<span>Остались вопросы? </span>
-								<p>Свяжитесь с нами, чтобы получить демо-доступ и узнать подробнее о продуктах DiState.
+								<div class="s5__title">Feedback </div>
+								<span>Do you have any questions? </span>
+								<p>Contact us to get demo access and learn more about DiState products.
 								</p>
 							</div>
+
 							<div class="notactive active">
 								<div class="desctop-checkbox chekbox">
 									<input type="checkbox" name="" id="check1">
 									<label for="check1"><i class="fas fa-check"></i></label>
-									<span>Я согласен(а) с <a href="">Политикой конфиденциальности</a></span>
+									<span>I agree with <a href="">Privacy Policy</a></span>
 								</div>
-								<button type="submite" class="btn-big-o section5__btn">Отправить</button>
+								<button type="submite" class="btn-big-o section5__btn">Send</button>
 							</div>
 						</div>
 
-						<img class="s5__img" src="./img/s5img.svg" alt="">
+						<img class="s5__img" data-wow-duration="1.5s" src="./img/s5img.svg" alt="">
 						<img src="./img/s5f.png" alt="" class="s5__fon">
 
 						<div class="section5__sussces active">
 							<div class="section5__sussces__wrap">
-								<div class="s5__title">Спасибо за обращение! </div>
-								<p>Наши специалисты свяжутся с вами в ближайшее время.</p>
+								<div class="s5__title">Thank you for your feedback! </div>
+								<p>Our experts will contact you shortly.</p>
 							</div>
 
 						</div>
@@ -335,7 +348,7 @@
 							<img src="./img/logof.svg">
 						</a>
 						<div class="footer__conf">
-							<a href="" class="politica">Политика конфиденциальности</a>
+							<a href="" class="politica">Privacy Policy</a>
 							<div class="footer__soc">
 								<a href=""><i class="fab fa-facebook-f"></i></a>
 								<a href=""><i class="fab fa-instagram"></i></a>
@@ -349,66 +362,65 @@
 					</div>
 					<div class="footer__right">
 						<div class="footer__menu">
-							<div class="footer__menu__t">Продукты</div>
+							<div class="footer__menu__t">Products</div>
 							<div class="footer__menu__c">
-								<a href="">DiState: Мультипровайдер</a>
-								<a href="">DiState: Мультипровайдер</a>
-								<a href="">DiState: Кадры</a>
-								<a href="">DiState: Организатор ЭДО</a>
-								<a href="">DiState: Оператор ЭДО</a>
+								<a href="">DiState: Multiprovider</a>
+								<a href="">DiState: Personnel</a>
+								<a href="">DiState: EDI Organizer</a>
+								<a href="">DiState: EDF operator</a>
 							</div>
 						</div>
 
 						<div class="footer__menu">
-							<div class="footer__menu__t">Поддержка</div>
+							<div class="footer__menu__t">Support</div>
 							<div class="footer__menu__c">
-								<a href="">Техподдержка</a>
-								<a href="">Премиум-поддержка</a>
-								<a href="">База знаний</a>
+								<a href="">Support</a>
+								<a href="">Premium support</a>
+								<a href="">Knowledge base</a>
 							</div>
 						</div>
 
 						<div class="footer__menu">
-							<div class="footer__menu__t">Отрасли</div>
+							<div class="footer__menu__t">Industries</div>
 							<div class="footer__menu__c">
-								<a href="">Малый бизнес</a>
-								<a href="">Телеком</a>
-								<a href="">Ритейл</a>
-								<a href="">Автопром</a>
-								<a href="">Банковский сектор</a>
+								<a href="">Small business</a>
+								<a href="">Telecom</a>
+								<a href="">Retail</a>
+								<a href="">Auto industry</a>
+								<a href="">Banking sector</a>
 
-								<a href="">Производство</a>
-								<a href="">Арендный бизнес</a>
-								<a href="">Логистика</a>
-								<a href="">Маркетплейсы</a>
-								<a href="">ЭТП, УЦ</a>
+								<a href="">Production</a>
+								<a href="">Rental business</a>
+								<a href="">Logistics</a>
+								<a href="">Marketplaces</a>
+								<a href="">ETP, UC</a>
 							</div>
 						</div>
 
 						<div class="footer__menu">
-							<div class="footer__menu__t">Партнерство</div>
+							<div class="footer__menu__t">Partnership</div>
 							<div class="footer__menu__c">
-								<a href="">Для дилеров</a>
-								<a href="">Для партнеров </a>
-								<a href="">Крипто про </a>
+								<a href="">For dealers</a>
+								<a href="">For partners </a>
+								<a href="">Crypto pro </a>
 							</div>
 						</div>
 						<div class="footer__menu">
-							<div class="footer__menu__t">Компания</div>
+							<div class="footer__menu__t">Company</div>
 							<div class="footer__menu__c">
-								<a href="">О компании</a>
-								<a href="">Документы</a>
-								<a href="">Карьера </a>
-								<a href="">Реквизиты</a>
-								<a href="">Контакты</a>
+								<a href="">About company</a>
+								<a href="">Documentation</a>
+								<a href="">Career </a>
+								<a href="">Requisites</a>
+								<a href="">Contacts</a>
 							</div>
 						</div>
 						<div class="footer__menu">
-							<div class="footer__menu__t">Медиа</div>
+							<div class="footer__menu__t">Media</div>
 							<div class="footer__menu__c">
-								<a href="">Новости </a>
-								<a href="">СМИ о нас</a>
-								<a href="">Истории успеха</a>
+								<a href="">News </a>
+								<a href="">Mass Media about us</a>
+								<a href="">Success stories</a>
 
 							</div>
 						</div>
@@ -416,7 +428,7 @@
 					</div>
 				</div>
 				<div class="footer__bot">
-					© DiState, 2009-2020 г. Все права защищены.
+					© DiState, 2009-2020. All rights reserved.
 				</div>
 			</div>
 		</footer>
