--- a/rekvisiti.html
+++ b/rekvisiti.html
@@ -40,67 +40,67 @@
 						<nav class="header__nav">
 							<ul>
 								<li>
-									<span>Продукты</span>
+									<span>Products</span>
 									<div class="header__level2">
 										<div class="wrap">
-											<div class="level2__title">Продукты</div>
+											<div class="level2__title">Products</div>
 											<div class="level2__links">
-												<a href="">DiState: Мультипровайдер</a>
-												<a href="">DiState: Организатор ЭДО</a>
-												<a href="">DiState: Документооборот</a>
-												<a href="">DiState: Оператор ЭДО</a>
-												<a href="">DiState: Кадры</a>
+												<a href="p-multi.html">DiState: multiprovider</a>
+												<a href="p-cadr.html">DiState: EDI Organizer</a>
+												<a href="p-document.html">DiState: Document flow</a>
+												<a href="p-operator.html">DiState: EDF operator</a>
+												<a href="p-cadr.html">DiState: Personnel</a>
 											</div>
 										</div>
 									</div>
 								</li>
 								<li>
-									<span>Решения</span>
+									<span>Solutions</span>
 									<div class="header__level2">
 										<div class="wrap">
-											<div class="level2__title">Решения</div>
+											<div class="level2__title">Solutions</div>
 											<div class="level2__links">
-												<a href="">Малый бизнес</a>
-												<a href="">Автопром</a>
-												<a href="">Арендный бизнес</a>
-												<a href="">Телеком</a>
-												<a href="">Банковский сектор</a>
-												<a href="">Логистика</a>
-												<a href="">Ритейл</a>
-												<a href="">Производство</a>
-												<a href="">Маркетплейсы</a>
-												<a href="">ЭТП, УЦ</a>
+												<a>Small business</a>
+												<a>Auto industry</a>
+												<a>Rental business</a>
+												<a>Telecom</a>
+												<a>Banking sector</a>
+												<a>Logistics</a>
+												<a>Retail</a>
+												<a>Production</a>
+												<a>Marketplaces</a>
+												<a>ETP, UC</a>
 											</div>
 										</div>
 									</div>
 								</li>
 								<li>
-									<span>Партнерство </span>
+									<span>Partnership </span>
 									<div class="header__level2">
 										<div class="wrap">
-											<div class="level2__title">Партнерство </div>
+											<div class="level2__title">Partnership </div>
 											<div class="level2__links">
-												<a href="">Для дилеров</a>
-												<a href="">Для партнеров</a>
-												<a href="">КриптоПро </a>
+												<a href="">For dealers</a>
+												<a href="">For partners</a>
+												<a href="">CryptoPro </a>
 											</div>
 										</div>
 									</div>
 								</li>
 								<li>
-									<span>Поддержка</span>
+									<span>Support</span>
 									<div class="header__level2">
 										<div class="wrap">
-											<div class="level2__title">Поддержка</div>
+											<div class="level2__title">Support</div>
 											<div class="level2__links">
-												<a href="">Премиум-поддержка</a>
-												<a href="">Техподдержка </a>
-												<a href="">База знаний</a>
+												<a href="">Premium support</a>
+												<a href="">Support </a>
+												<a href="">Knowledge base</a>
 											</div>
 										</div>
 								</li>
 								<li>
-									<a href="">Вход в ЭДО</a>
+									<a href="">Login to EDO</a>
 
 								</li>
 							</ul>
@@ -112,73 +112,74 @@
 		<main class="main">
 
 			<div class="rek">
-				<img src="./img/sfon/rec/1.png" class="rekfon">
+				<img src="./img/rek.png" class="rekfon">
 				<div class="rek__wrap">
-					<div class="title">Реквизиты</div>
-					<div class="rek__text">Общество с ограниченной ответственностью «ДиСтэйт»</div>
+					<div class="title">Requisites</div>
+					<div class="rek__text">Limited Liability Company "DeState"</div>
 					<div class="rek__item">
-						<div class="rek__left">Сокращенное наименование компании:</div>
-						<div class="rek__right">ООО «ДиСтэйт»</div>
+						<div class="rek__left">Abbreviated company name:</div>
+						<div class="rek__right">LLC "DiState"</div>
 					</div>
 
 					<div class="rek__item">
-						<div class="rek__left">ИНН:</div>
+						<div class="rek__left">TIN:</div>
 						<div class="rek__right">7810732125</div>
 					</div>
 
 					<div class="rek__item">
-						<div class="rek__left">КПП:</div>
+						<div class="rek__left">checkpoint:</div>
 						<div class="rek__right">781001001</div>
 					</div>
 
 					<div class="rek__item">
-						<div class="rek__left">ОГРН:</div>
+						<div class="rek__left">OGRN:</div>
 						<div class="rek__right">1187847162557</div>
 					</div>
 
 					<div class="rek__item">
-						<div class="rek__left">Юридический адрес:</div>
-						<div class="rek__right">196084, Санкт-Петербург, ул. Новорощинская, д.4, офис 926-2</div>
+						<div class="rek__left">Legal address:</div>
+						<div class="rek__right">196084, Los Angeles, st. brighton, 4, office 926-2</div>
 					</div>
 
 					<div class="rek__item">
-						<div class="rek__left">Почтовый адрес:</div>
-						<div class="rek__right">196006, Санкт-Петербург, ул. Новорощинская, д.4, офис 926-2</div>
+						<div class="rek__left">Mailing address:</div>
+						<div class="rek__right">196084, Los Angeles, st. brighton, 4, office 926-2</div>
 					</div>
 
 					<div class="rek__item">
-						<div class="rek__left group">Банковские реквизиты:</div>
+						<div class="rek__left group">Bank details:</div>
 						<div class="rek__right"></div>
 					</div>
 
 					<div class="rek__item">
-						<div class="rek__left">Наименование банка:</div>
-						<div class="rek__right">Северо-Западный Банк ПАО СБЕРБАНК</div>
+						<div class="rek__left">Name of the bank:</div>
+						<div class="rek__right">North-Western Bank PJSC SBERBANK</div>
 					</div>
 
 					<div class="rek__item">
-						<div class="rek__left">Расчетный счет:</div>
+						<div class="rek__left">Checking account:</div>
 						<div class="rek__right">4070 2810 1550 0001 6598</div>
 					</div>
 
 					<div class="rek__item">
-						<div class="rek__left">БИК:</div>
+						<div class="rek__left">BIC:</div>
 						<div class="rek__right">044030653</div>
 					</div>
 
 					<div class="rek__item">
-						<div class="rek__left">Корреспондентский счет:</div>
-						<div class="rek__right">3010 1810 5000 0000 0653<br> в Северо-Западное ГУ Банка России</div>
+						<div class="rek__left">Correspondent account:</div>
+						<div class="rek__right">3010 1810 5000 0000 0653 to the North-Western State Bank of the USA
+						</div>
 					</div>
 
 					<div class="rek__item">
-						<div class="rek__left">Генеральный директор:</div>
-						<div class="rek__right"><b>Михайлова Екатерина Вячеславовна,</b> действует на основании Устава
-							Общества.</div>
+						<div class="rek__left">CEO:</div>
+						<div class="rek__right"><b>FirstName LastName,</b> operates on the basis of the Charter
+							Society.</div>
 					</div>
 				</div>
 				<div class="rek__download">
-					<a href=""><span></span>Скачать</a>
+					<a href=""><span></span>Download</a>
 				</div>
 			</div>
 
@@ -192,7 +193,7 @@
 							<img src="./img/logof.svg">
 						</a>
 						<div class="footer__conf">
-							<a href="" class="politica">Политика конфиденциальности</a>
+							<a href="" class="politica">Privacy Policy</a>
 							<div class="footer__soc">
 								<a href=""><i class="fab fa-facebook-f"></i></a>
 								<a href=""><i class="fab fa-instagram"></i></a>
@@ -206,66 +207,65 @@
 					</div>
 					<div class="footer__right">
 						<div class="footer__menu">
-							<div class="footer__menu__t">Продукты</div>
+							<div class="footer__menu__t">Products</div>
 							<div class="footer__menu__c">
-								<a href="">DiState: Мультипровайдер</a>
-								<a href="">DiState: Мультипровайдер</a>
-								<a href="">DiState: Кадры</a>
-								<a href="">DiState: Организатор ЭДО</a>
-								<a href="">DiState: Оператор ЭДО</a>
+								<a href="">DiState: Multiprovider</a>
+								<a href="">DiState: Personnel</a>
+								<a href="">DiState: EDI Organizer</a>
+								<a href="">DiState: EDF operator</a>
 							</div>
 						</div>
 
 						<div class="footer__menu">
-							<div class="footer__menu__t">Поддержка</div>
+							<div class="footer__menu__t">Support</div>
 							<div class="footer__menu__c">
-								<a href="">Техподдержка</a>
-								<a href="">Премиум-поддержка</a>
-								<a href="">База знаний</a>
+								<a href="">Support</a>
+								<a href="">Premium support</a>
+								<a href="">Knowledge base</a>
 							</div>
 						</div>
 
 						<div class="footer__menu">
-							<div class="footer__menu__t">Отрасли</div>
+							<div class="footer__menu__t">Industries</div>
 							<div class="footer__menu__c">
-								<a href="">Малый бизнес</a>
-								<a href="">Телеком</a>
-								<a href="">Ритейл</a>
-								<a href="">Автопром</a>
-								<a href="">Банковский сектор</a>
+								<a href="">Small business</a>
+								<a href="">Telecom</a>
+								<a href="">Retail</a>
+								<a href="">Auto industry</a>
+								<a href="">Banking sector</a>
 
-								<a href="">Производство</a>
-								<a href="">Арендный бизнес</a>
-								<a href="">Логистика</a>
-								<a href="">Маркетплейсы</a>
-								<a href="">ЭТП, УЦ</a>
+								<a href="">Production</a>
+								<a href="">Rental business</a>
+								<a href="">Logistics</a>
+								<a href="">Marketplaces</a>
+								<a href="">ETP, UC</a>
 							</div>
 						</div>
 
 						<div class="footer__menu">
-							<div class="footer__menu__t">Партнерство</div>
+							<div class="footer__menu__t">Partnership</div>
 							<div class="footer__menu__c">
-								<a href="">Для дилеров</a>
-								<a href="">Для партнеров </a>
-								<a href="">Крипто про </a>
+								<a href="">For dealers</a>
+								<a href="">For partners </a>
+								<a href="">Crypto pro </a>
 							</div>
 						</div>
 						<div class="footer__menu">
-							<div class="footer__menu__t">Компания</div>
+							<div class="footer__menu__t">Company</div>
 							<div class="footer__menu__c">
-								<a href="">О компании</a>
-								<a href="">Документы</a>
-								<a href="">Карьера </a>
-								<a href="">Реквизиты</a>
-								<a href="">Контакты</a>
+								<a href="">About company</a>
+								<a href="">Documentation</a>
+								<a href="">Career </a>
+								<a href="">Requisites</a>
+								<a href="">Contacts</a>
 							</div>
 						</div>
 						<div class="footer__menu">
-							<div class="footer__menu__t">Медиа</div>
+							<div class="footer__menu__t">Media</div>
 							<div class="footer__menu__c">
-								<a href="">Новости </a>
-								<a href="">СМИ о нас</a>
-								<a href="">Истории успеха</a>
+								<a href="">News </a>
+								<a href="">Mass Media about us</a>
+								<a href="">Success stories</a>
 
 							</div>
 						</div>
@@ -273,7 +273,7 @@
 					</div>
 				</div>
 				<div class="footer__bot">
-					© DiState, 2009-2020 г. Все права защищены.
+					© DiState, 2009-2020. All rights reserved.
 				</div>
 			</div>
 		</footer>
